--- a/portfolio.html
+++ b/portfolio.html
@@ -14,29 +14,31 @@
       <nav>
         <ul>
           <li>
-            <a href="https://volodymyrtrush.github.io/goit-markup-hw-01/"></a
-            >Студия
+            <a href="https://volodymyrtrush.github.io/goit-markup-hw-01/"
+              >Студия</a
+            >
           </li>
-          <li><a href=""></a>Портфолио</li>
-          <li><a href=""></a>Контакты</li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
         </ul>
       </nav>
       <ul>
-        <li><a href="mailto:info@devstudio.com"></a>info@devstudio.com</li>
-        <li><a href="tel:+380961111111"></a>+38 096 111 11 11</li>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
+    <!--Портфолио главный контент -->
     <main>
       <!--Шапка-->
-      <section>
+      <div>
         <ul>
-          <li><a href="" type="button"></a>Все</li>
-          <li><a href="" type="button"></a>Веб-сайты</li>
-          <li><a href="" type="button"></a>Приложения</li>
-          <li><a href="" type="button"></a>Дизайн</li>
-          <li><a href="" type="button"></a>Маркетинг</li>
+          <li><button type="button">Все</button></li>
+          <li><button type="button">Веб-сайты</button></li>
+          <li><button type="button">Приложения</button></li>
+          <li><button type="button">Дизайн</button></li>
+          <li><button type="button">Маркетинг</button></li>
         </ul>
-      </section>
+      </div>
       <section>
         <ul>
           <li>
@@ -45,7 +47,7 @@
               alt="Экран ноутбука с фото"
               width="370"
             />
-            <h3>Технокряк</h3>
+            <h2>Технокряк</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
@@ -54,17 +56,17 @@
               alt="Баслетболисты с мячём"
               width="370"
             />
-            <h3>Постер New Orlean vs Golden Star</h3>
+            <h2>Постер New Orlean vs Golden Star</h2>
             <p>Дизайн</p>
           </li>
           <li>
             <img src="./images/img6.jpg" alt="Эмблема ресторана" width="370" />
-            <h3>Ресторан Seafood</h3>
+            <h2>Ресторан Seafood</h2>
             <p>Приложение</p>
           </li>
           <li>
             <img src="./images/img7.jpg" alt="Наушники" width="370" />
-            <h3>Проект Prime</h3>
+            <h2>Проект Prime</h2>
             <p>Маркетинг</p>
           </li>
           <li>
@@ -73,7 +75,7 @@
               alt="Две коробки с надписями"
               width="370"
             />
-            <h3>Проект Boxes</h3>
+            <h2>Проект Boxes</h2>
             <p>Приложение</p>
           </li>
           <li>
@@ -82,12 +84,12 @@
               alt="Экран монирора с страницей"
               width="370"
             />
-            <h3>Inspiration has no Borders</h3>
+            <h2>Inspiration has no Borders</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
             <img src="./images/img10.jpg" alt="Открытая книга" width="370" />
-            <h3>Издание Limited Edition</h3>
+            <h2>Издание Limited Edition</h2>
             <p>Дизайн</p>
           </li>
           <li>
@@ -96,7 +98,7 @@
               alt="Лейба прямоугольная фон белый"
               width="370"
             />
-            <h3>Проект LAB</h3>
+            <h2>Проект LAB</h2>
             <p>Маркетинг</p>
           </li>
           <li>
@@ -105,7 +107,7 @@
               alt="Руки на клавиатуре ноутбука"
               width="370"
             />
-            <h3>Growing Business</h3>
+            <h2>Growing Business</h2>
             <p>Приложение</p>
           </li>
         </ul>
