--- a/portfolio.html
+++ b/portfolio.html
@@ -10,21 +10,28 @@
   <body>
     <!--Верхняя линия-->
     <header>
-      <a href="">WebStudio</a>
+      <a class="link-logo" href=""
+        ><span class="link-logo-w">Web</span
+        ><span class="link-logo-hs">Studio</span></a
+      >
       <nav>
         <ul>
           <li>
-            <a href="https://volodymyrtrush.github.io/goit-markup-hw-01/"
-              >Студия</a
-            >
+            <a class="link" href="./index.html">Студия</a>
           </li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a class="link current" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="link" href="">Контакты</a></li>
         </ul>
       </nav>
       <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li>
+          <a class="link-address" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="link-address" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
     <!--Портфолио главный контент -->
@@ -32,83 +39,105 @@
       <!--Шапка-->
       <div>
         <ul>
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайты</button></li>
-          <li><button type="button">Приложения</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+          <li><button class="button" type="button">Все</button></li>
+          <li><button class="button" type="button">Веб-сайты</button></li>
+          <li><button class="button" type="button">Приложения</button></li>
+          <li><button class="button" type="button">Дизайн</button></li>
+          <li><button class="button" type="button">Маркетинг</button></li>
         </ul>
       </div>
       <section>
         <ul>
           <li>
-            <img
-              src="./images/img4.jpg"
-              alt="Экран ноутбука с фото"
-              width="370"
-            />
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
+            <div>
+              <img
+                src="./images/img4.jpg"
+                alt="Экран ноутбука с фото"
+                width="370"
+              />
+              <h3>Технокряк</h3>
+              <p class="direction">Веб-сайт</p>
+            </div>
           </li>
           <li>
-            <img
-              src="./images/img5.jpg"
-              alt="Баслетболисты с мячём"
-              width="370"
-            />
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+            <div>
+              <img
+                src="./images/img5.jpg"
+                alt="Баслетболисты с мячём"
+                width="370"
+              />
+              <h3>Постер New Orlean vs Golden Star</h3>
+              <p class="direction">Дизайн</p>
+            </div>
           </li>
           <li>
-            <img src="./images/img6.jpg" alt="Эмблема ресторана" width="370" />
-            <h2>Ресторан Seafood</h2>
-            <p>Приложение</p>
+            <div>
+              <img
+                src="./images/img6.jpg"
+                alt="Эмблема ресторана"
+                width="370"
+              />
+              <h3>Ресторан Seafood</h3>
+              <p class="direction">Приложение</p>
+            </div>
           </li>
           <li>
-            <img src="./images/img7.jpg" alt="Наушники" width="370" />
-            <h2>Проект Prime</h2>
-            <p>Маркетинг</p>
+            <div>
+              <img src="./images/img7.jpg" alt="Наушники" width="370" />
+              <h3>Проект Prime</h3>
+              <p class="direction">Маркетинг</p>
+            </div>
           </li>
           <li>
-            <img
-              src="./images/img8.jpg"
-              alt="Две коробки с надписями"
-              width="370"
-            />
-            <h2>Проект Boxes</h2>
-            <p>Приложение</p>
+            <div>
+              <img
+                src="./images/img8.jpg"
+                alt="Две коробки с надписями"
+                width="370"
+              />
+              <h3>Проект Boxes</h3>
+              <p class="direction">Приложение</p>
+            </div>
           </li>
           <li>
-            <img
-              src="./images/img9.jpg"
-              alt="Экран монирора с страницей"
-              width="370"
-            />
-            <h2>Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <div>
+              <img
+                src="./images/img9.jpg"
+                alt="Экран монирора с страницей"
+                width="370"
+              />
+              <h3>Inspiration has no Borders</h3>
+              <p class="direction">Веб-сайт</p>
+            </div>
           </li>
           <li>
-            <img src="./images/img10.jpg" alt="Открытая книга" width="370" />
-            <h2>Издание Limited Edition</h2>
-            <p>Дизайн</p>
+            <div>
+              <img src="./images/img10.jpg" alt="Открытая книга" width="370" />
+              <h3>Издание Limited Edition</h3>
+              <p class="direction">Дизайн</p>
+            </div>
           </li>
           <li>
-            <img
-              src="./images/img11.jpg"
-              alt="Лейба прямоугольная фон белый"
-              width="370"
-            />
-            <h2>Проект LAB</h2>
-            <p>Маркетинг</p>
+            <div>
+              <img
+                src="./images/img11.jpg"
+                alt="Лейба прямоугольная фон белый"
+                width="370"
+              />
+              <h3>Проект LAB</h3>
+              <p class="direction">Маркетинг</p>
+            </div>
           </li>
           <li>
-            <img
-              src="./images/img12.jpg"
-              alt="Руки на клавиатуре ноутбука"
-              width="370"
-            />
-            <h2>Growing Business</h2>
-            <p>Приложение</p>
+            <div>
+              <img
+                src="./images/img12.jpg"
+                alt="Руки на клавиатуре ноутбука"
+                width="370"
+              />
+              <h3>Growing Business</h3>
+              <p class="direction">Приложение</p>
+            </div>
           </li>
         </ul>
       </section>
@@ -116,17 +145,30 @@
     <footer>
       <!--Подвал контакты-->
       <div>
-        <a href="">WebStudio</a>
+        <a class="link-logo" href=""
+          ><span class="link-logo-w">Web</span
+          ><span class="link-logo-fs">Studio</span></a
+        >
         <address>
           <ul>
             <li>
               <a
+                class="link-address"
                 href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
+                target="_blank"
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li><a href="mailto:info@devstudio.com">info@example.com</a></li>
-            <li><a href="tel:+380961111111">+38 099 111 11 11</a></li>
+            <li>
+              <a class="link-address" href="mailto:info@devstudio.com"
+                >info@example.com</a
+              >
+            </li>
+            <li>
+              <a class="link-address" href="tel:+380961111111"
+                >+38 099 111 11 11</a
+              >
+            </li>
           </ul>
         </address>
       </div>
