--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -38,7 +42,7 @@
     <main>
       <!--Шапка-->
       <div>
-        <ul>
+        <ul class="filter">
           <li><button class="button" type="button">Все</button></li>
           <li><button class="button" type="button">Веб-сайты</button></li>
           <li><button class="button" type="button">Приложения</button></li>
@@ -49,7 +53,7 @@
       <section>
         <ul>
           <li>
-            <div>
+            <a href="">
               <img
                 src="./images/img4.jpg"
                 alt="Экран ноутбука с фото"
@@ -57,10 +61,10 @@
               />
               <h3>Технокряк</h3>
               <p class="direction">Веб-сайт</p>
-            </div>
+            </a>
           </li>
           <li>
-            <div>
+            <a href="">
               <img
                 src="./images/img5.jpg"
                 alt="Баслетболисты с мячём"
@@ -68,10 +72,10 @@
               />
               <h3>Постер New Orlean vs Golden Star</h3>
               <p class="direction">Дизайн</p>
-            </div>
+            </a>
           </li>
           <li>
-            <div>
+            <a href="">
               <img
                 src="./images/img6.jpg"
                 alt="Эмблема ресторана"
@@ -79,17 +83,17 @@
               />
               <h3>Ресторан Seafood</h3>
               <p class="direction">Приложение</p>
-            </div>
+            </a>
           </li>
           <li>
-            <div>
+            <a href="">
               <img src="./images/img7.jpg" alt="Наушники" width="370" />
               <h3>Проект Prime</h3>
               <p class="direction">Маркетинг</p>
-            </div>
+            </a>
           </li>
           <li>
-            <div>
+            <a href="">
               <img
                 src="./images/img8.jpg"
                 alt="Две коробки с надписями"
@@ -97,10 +101,10 @@
               />
               <h3>Проект Boxes</h3>
               <p class="direction">Приложение</p>
-            </div>
+            </a>
           </li>
           <li>
-            <div>
+            <a href="">
               <img
                 src="./images/img9.jpg"
                 alt="Экран монирора с страницей"
@@ -108,17 +112,17 @@
               />
               <h3>Inspiration has no Borders</h3>
               <p class="direction">Веб-сайт</p>
-            </div>
+            </a>
           </li>
           <li>
-            <div>
+            <a href="">
               <img src="./images/img10.jpg" alt="Открытая книга" width="370" />
               <h3>Издание Limited Edition</h3>
               <p class="direction">Дизайн</p>
-            </div>
+            </a>
           </li>
           <li>
-            <div>
+            <a href="">
               <img
                 src="./images/img11.jpg"
                 alt="Лейба прямоугольная фон белый"
@@ -126,10 +130,10 @@
               />
               <h3>Проект LAB</h3>
               <p class="direction">Маркетинг</p>
-            </div>
+            </a>
           </li>
           <li>
-            <div>
+            <a href="">
               <img
                 src="./images/img12.jpg"
                 alt="Руки на клавиатуре ноутбука"
@@ -137,7 +141,7 @@
               />
               <h3>Growing Business</h3>
               <p class="direction">Приложение</p>
-            </div>
+            </a>
           </li>
         </ul>
       </section>
@@ -156,6 +160,7 @@
                 class="link-address"
                 href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
                 target="_blank"
+                rel="noopener noreferrer"
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
