--- a/index.html
+++ b/index.html
@@ -5,22 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Верхняя линия-->
     <header>
-      <a href="">WebStudio</a>
+      <a class="link-logo" href="./index.html"
+        ><span class="link-logo-w">Web</span
+        ><span class="link-logo-hs">Studio</span></a
+      >
       <nav>
         <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li>
+            <a class="link" href="./index.html">Студия</a>
+          </li>
+          <li><a class="link current" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="link" href="">Контакты</a></li>
         </ul>
       </nav>
       <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li>
+          <a class="header-link-address" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="header-link-address" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
     <!--Главный контент-->
@@ -29,12 +46,12 @@
       <section>
         <div>
           <h1>Эффективные решения для вашего бизнеса</h1>
-          <a href="" type="button">Заказать услугу</a>
+          <button class="button" type="button">Заказать услугу</button>
         </div>
       </section>
       <!--Особенности-->
       <section>
-        <ul>
+        <ul class="features">
           <li>
             <h3>Внимание к деталям</h3>
             <p>
@@ -86,23 +103,23 @@
         <ul>
           <li>
             <img src="./images/img.jpg" alt="Парень" width="270" />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="title">Игорь Демьяненко</h3>
+            <p class="direction">Product Designer</p>
           </li>
           <li>
             <img src="./images/img1.jpg" alt="Девушка" width="270" />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="title">Ольга Репина</h3>
+            <p class="direction">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img2.jpg" alt="Парень" width="270" />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="title">Николай Тарасов</h3>
+            <p class="direction">Marketing</p>
           </li>
           <li>
             <img src="./images/img3.jpg" alt="Парень" width="270" />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="title">Михаил Ермаков</h3>
+            <p class="direction">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -110,17 +127,31 @@
     <!--Подвал контакты-->
     <footer>
       <div>
-        <a href="">WebStudio</a>
+        <a class="link-logo" href="./index.html"
+          ><span class="link-logo-w">Web</span
+          ><span class="link-logo-fs">Studio</span></a
+        >
         <address>
           <ul>
             <li>
               <a
+                class="footer-link-map"
                 href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
+                target="_blank"
+                rel="noopener noreferrer"
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li><a href="mailto:info@devstudio.com">info@example.com</a></li>
-            <li><a href="tel:+380961111111">+38 099 111 11 11</a></li>
+            <li>
+              <a class="footer-link-address" href="mailto:info@devstudio.com"
+                >info@example.com</a
+              >
+            </li>
+            <li>
+              <a class="footer-link-address" href="tel:+380961111111"
+                >+38 099 111 11 11</a
+              >
+            </li>
           </ul>
         </address>
       </div>
