--- a/portfolio.html
+++ b/portfolio.html
@@ -9,12 +9,12 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link href="./css/styles.css" rel="stylesheet" />
   </head>
   <body>
     <!--Верхняя линия-->
     <header>
-      <a class="link-logo" href=""
+      <a class="link-logo" href="./index.html"
         ><span class="link-logo-w">Web</span
         ><span class="link-logo-hs">Studio</span></a
       >
@@ -29,12 +29,14 @@
       </nav>
       <ul>
         <li>
-          <a class="link-address" href="mailto:info@devstudio.com"
+          <a class="header-link-address" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
         <li>
-          <a class="link-address" href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="header-link-address" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
         </li>
       </ul>
     </header>
@@ -42,7 +44,7 @@
     <main>
       <!--Шапка-->
       <div>
-        <ul class="filter">
+        <ul>
           <li><button class="button" type="button">Все</button></li>
           <li><button class="button" type="button">Веб-сайты</button></li>
           <li><button class="button" type="button">Приложения</button></li>
@@ -58,10 +60,9 @@
                 src="./images/img4.jpg"
                 alt="Экран ноутбука с фото"
                 width="370"
-              />
-              <h3>Технокряк</h3>
-              <p class="direction">Веб-сайт</p>
-            </a>
+            /></a>
+            <h3 class="title">Технокряк</h3>
+            <p class="direction">Веб-сайт</p>
           </li>
           <li>
             <a href="">
@@ -69,28 +70,23 @@
                 src="./images/img5.jpg"
                 alt="Баслетболисты с мячём"
                 width="370"
-              />
-              <h3>Постер New Orlean vs Golden Star</h3>
-              <p class="direction">Дизайн</p>
-            </a>
+            /></a>
+            <h3 class="title">Постер New Orlean vs Golden Star</h3>
+            <p class="direction">Дизайн</p>
           </li>
           <li>
             <a href="">
-              <img
-                src="./images/img6.jpg"
-                alt="Эмблема ресторана"
-                width="370"
-              />
-              <h3>Ресторан Seafood</h3>
-              <p class="direction">Приложение</p>
-            </a>
+              <img src="./images/img6.jpg" alt="Эмблема ресторана" width="370"
+            /></a>
+            <h3 class="title">Ресторан Seafood</h3>
+            <p class="direction">Приложение</p>
           </li>
           <li>
             <a href="">
-              <img src="./images/img7.jpg" alt="Наушники" width="370" />
-              <h3>Проект Prime</h3>
-              <p class="direction">Маркетинг</p>
-            </a>
+              <img src="./images/img7.jpg" alt="Наушники" width="370"
+            /></a>
+            <h3 class="title">Проект Prime</h3>
+            <p class="direction">Маркетинг</p>
           </li>
           <li>
             <a href="">
@@ -98,10 +94,9 @@
                 src="./images/img8.jpg"
                 alt="Две коробки с надписями"
                 width="370"
-              />
-              <h3>Проект Boxes</h3>
-              <p class="direction">Приложение</p>
-            </a>
+            /></a>
+            <h3 class="title">Проект Boxes</h3>
+            <p class="direction">Приложение</p>
           </li>
           <li>
             <a href="">
@@ -109,17 +104,16 @@
                 src="./images/img9.jpg"
                 alt="Экран монирора с страницей"
                 width="370"
-              />
-              <h3>Inspiration has no Borders</h3>
-              <p class="direction">Веб-сайт</p>
-            </a>
+            /></a>
+            <h3 class="title">Inspiration has no Borders</h3>
+            <p class="direction">Веб-сайт</p>
           </li>
           <li>
             <a href="">
-              <img src="./images/img10.jpg" alt="Открытая книга" width="370" />
-              <h3>Издание Limited Edition</h3>
-              <p class="direction">Дизайн</p>
-            </a>
+              <img src="./images/img10.jpg" alt="Открытая книга" width="370"
+            /></a>
+            <h3 class="title">Издание Limited Edition</h3>
+            <p class="direction">Дизайн</p>
           </li>
           <li>
             <a href="">
@@ -127,10 +121,9 @@
                 src="./images/img11.jpg"
                 alt="Лейба прямоугольная фон белый"
                 width="370"
-              />
-              <h3>Проект LAB</h3>
-              <p class="direction">Маркетинг</p>
-            </a>
+            /></a>
+            <h3 class="title">Проект LAB</h3>
+            <p class="direction">Маркетинг</p>
           </li>
           <li>
             <a href="">
@@ -138,18 +131,17 @@
                 src="./images/img12.jpg"
                 alt="Руки на клавиатуре ноутбука"
                 width="370"
-              />
-              <h3>Growing Business</h3>
-              <p class="direction">Приложение</p>
-            </a>
+            /></a>
+            <h3 class="title">Growing Business</h3>
+            <p class="direction">Приложение</p>
           </li>
         </ul>
       </section>
     </main>
+    <!--Подвал контакты-->
     <footer>
-      <!--Подвал контакты-->
       <div>
-        <a class="link-logo" href=""
+        <a class="link-logo" href="./index.html"
           ><span class="link-logo-w">Web</span
           ><span class="link-logo-fs">Studio</span></a
         >
@@ -157,7 +149,7 @@
           <ul>
             <li>
               <a
-                class="link-address"
+                class="footer-link-map"
                 href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -165,12 +157,12 @@
               >
             </li>
             <li>
-              <a class="link-address" href="mailto:info@devstudio.com"
+              <a class="footer-link-address" href="mailto:info@devstudio.com"
                 >info@example.com</a
               >
             </li>
             <li>
-              <a class="link-address" href="tel:+380961111111"
+              <a class="footer-link-address" href="tel:+380961111111"
                 >+38 099 111 11 11</a
               >
             </li>
