HTML-размета страницы портфолио с CSS оформлением
Оформление  CSS Studio  and Portfolio

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <nav>
         <ul>
           <li>
-            <a class="link" href="./index.html">Студия</a>
+            <a class="link current" href="./index.html">Студия</a>
           </li>
-          <li><a class="link current" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="link" href="./portfolio.html">Портфолио</a></li>
           <li><a class="link" href="">Контакты</a></li>
         </ul>
       </nav>
@@ -43,10 +43,10 @@
     <!--Главный контент-->
     <main>
       <!--Шапка-->
-      <section>
+      <section class="hero">
         <div>
-          <h1>Эффективные решения для вашего бизнеса</h1>
-          <button class="button" type="button">Заказать услугу</button>
+          <h1 class="hero-text">Эффективные решения для вашего бизнеса</h1>
+          <button class="hero-button" type="button">Заказать услугу</button>
         </div>
       </section>
       <!--Особенности-->
