--- a/portfolio.html
+++ b/portfolio.html
@@ -61,8 +61,8 @@
                 alt="Экран ноутбука с фото"
                 width="370"
             /></a>
-            <h3 class="title">Технокряк</h3>
-            <p class="direction">Веб-сайт</p>
+            <h3 class="title-port">Технокряк</h3>
+            <p class="direction-port">Веб-сайт</p>
           </li>
           <li>
             <a href="">
@@ -71,22 +71,22 @@
                 alt="Баслетболисты с мячём"
                 width="370"
             /></a>
-            <h3 class="title">Постер New Orlean vs Golden Star</h3>
-            <p class="direction">Дизайн</p>
+            <h3 class="title-port">Постер New Orlean vs Golden Star</h3>
+            <p class="direction-port">Дизайн</p>
           </li>
           <li>
             <a href="">
               <img src="./images/img6.jpg" alt="Эмблема ресторана" width="370"
             /></a>
-            <h3 class="title">Ресторан Seafood</h3>
-            <p class="direction">Приложение</p>
+            <h3 class="title-port">Ресторан Seafood</h3>
+            <p class="direction-port">Приложение</p>
           </li>
           <li>
             <a href="">
               <img src="./images/img7.jpg" alt="Наушники" width="370"
             /></a>
-            <h3 class="title">Проект Prime</h3>
-            <p class="direction">Маркетинг</p>
+            <h3 class="title-port">Проект Prime</h3>
+            <p class="direction-port">Маркетинг</p>
           </li>
           <li>
             <a href="">
@@ -95,8 +95,8 @@
                 alt="Две коробки с надписями"
                 width="370"
             /></a>
-            <h3 class="title">Проект Boxes</h3>
-            <p class="direction">Приложение</p>
+            <h3 class="title-port">Проект Boxes</h3>
+            <p class="direction-port">Приложение</p>
           </li>
           <li>
             <a href="">
@@ -105,15 +105,15 @@
                 alt="Экран монирора с страницей"
                 width="370"
             /></a>
-            <h3 class="title">Inspiration has no Borders</h3>
-            <p class="direction">Веб-сайт</p>
+            <h3 class="title-port">Inspiration has no Borders</h3>
+            <p class="direction-port">Веб-сайт</p>
           </li>
           <li>
             <a href="">
               <img src="./images/img10.jpg" alt="Открытая книга" width="370"
             /></a>
-            <h3 class="title">Издание Limited Edition</h3>
-            <p class="direction">Дизайн</p>
+            <h3 class="title-port">Издание Limited Edition</h3>
+            <p class="direction-port">Дизайн</p>
           </li>
           <li>
             <a href="">
@@ -122,8 +122,8 @@
                 alt="Лейба прямоугольная фон белый"
                 width="370"
             /></a>
-            <h3 class="title">Проект LAB</h3>
-            <p class="direction">Маркетинг</p>
+            <h3 class="title-port">Проект LAB</h3>
+            <p class="direction-port">Маркетинг</p>
           </li>
           <li>
             <a href="">
@@ -132,8 +132,8 @@
                 alt="Руки на клавиатуре ноутбука"
                 width="370"
             /></a>
-            <h3 class="title">Growing Business</h3>
-            <p class="direction">Приложение</p>
+            <h3 class="title-port">Growing Business</h3>
+            <p class="direction-port">Приложение</p>
           </li>
         </ul>
       </section>
