HTML-размета страницы портфолио с CSS оформлением
Оформленное ДЗ 2

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -14,9 +14,9 @@
   <body>
     <!--Верхняя линия-->
     <header>
-      <a class="link-logo" href="./index.html"
-        ><span class="link-logo-w">Web</span
-        ><span class="link-logo-hs">Studio</span></a
+      <a class="logo" href="./index.html"
+        ><span class="logo-web" lang="en">Web</span
+        ><span class="logo-studio-header" lang="en">Studio</span></a
       >
       <nav>
         <ul>
@@ -71,21 +71,23 @@
                 alt="Баслетболисты с мячём"
                 width="370"
             /></a>
-            <h3 class="title-port">Постер New Orlean vs Golden Star</h3>
+            <h3 class="title-port">
+              Постер<span lang="en">Orlean vs Golden Star</span>
+            </h3>
             <p class="direction-port">Дизайн</p>
           </li>
           <li>
             <a href="">
               <img src="./images/img6.jpg" alt="Эмблема ресторана" width="370"
             /></a>
-            <h3 class="title-port">Ресторан Seafood</h3>
+            <h3 class="title-port">Ресторан<span lang="en">Seafood</span></h3>
             <p class="direction-port">Приложение</p>
           </li>
           <li>
             <a href="">
               <img src="./images/img7.jpg" alt="Наушники" width="370"
             /></a>
-            <h3 class="title-port">Проект Prime</h3>
+            <h3 class="title-port">Проект<span lang="en">Prime</span></h3>
             <p class="direction-port">Маркетинг</p>
           </li>
           <li>
@@ -95,7 +97,7 @@
                 alt="Две коробки с надписями"
                 width="370"
             /></a>
-            <h3 class="title-port">Проект Boxes</h3>
+            <h3 class="title-port">Проект<span lang="en">Boxes</span></h3>
             <p class="direction-port">Приложение</p>
           </li>
           <li>
@@ -105,14 +107,16 @@
                 alt="Экран монирора с страницей"
                 width="370"
             /></a>
-            <h3 class="title-port">Inspiration has no Borders</h3>
+            <h3 class="title-port" lang="en">Inspiration has no Borders</h3>
             <p class="direction-port">Веб-сайт</p>
           </li>
           <li>
             <a href="">
               <img src="./images/img10.jpg" alt="Открытая книга" width="370"
             /></a>
-            <h3 class="title-port">Издание Limited Edition</h3>
+            <h3 class="title-port">
+              Издание<span lang="en">Limited Edition</span>
+            </h3>
             <p class="direction-port">Дизайн</p>
           </li>
           <li>
@@ -122,7 +126,7 @@
                 alt="Лейба прямоугольная фон белый"
                 width="370"
             /></a>
-            <h3 class="title-port">Проект LAB</h3>
+            <h3 class="title-port">Проект<span lang="en">LAB</span></h3>
             <p class="direction-port">Маркетинг</p>
           </li>
           <li>
@@ -132,7 +136,7 @@
                 alt="Руки на клавиатуре ноутбука"
                 width="370"
             /></a>
-            <h3 class="title-port">Growing Business</h3>
+            <h3 class="title-port" lang="en">Growing Business</h3>
             <p class="direction-port">Приложение</p>
           </li>
         </ul>
@@ -141,9 +145,9 @@
     <!--Подвал контакты-->
     <footer>
       <div>
-        <a class="link-logo" href="./index.html"
-          ><span class="link-logo-w">Web</span
-          ><span class="link-logo-fs">Studio</span></a
+        <a class="logo" href="./index.html"
+          ><span class="logo-web" lang="en">Web</span
+          ><span class="logo-studio-footer" lang="en">Studio</span></a
         >
         <address>
           <ul>
