--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -14,9 +14,9 @@
   <body>
     <!--Верхняя линия-->
     <header>
-      <a class="link-logo" href="./index.html"
-        ><span class="link-logo-w">Web</span
-        ><span class="link-logo-hs">Studio</span></a
+      <a class="logo" href="./index.html"
+        ><span class="logo-web" lang="en">Web</span
+        ><span class="logo-studio-header" lang="en">Studio</span></a
       >
       <nav>
         <ul>
@@ -45,7 +45,10 @@
       <!--Шапка-->
       <section class="hero">
         <div>
-          <h1 class="hero-text">Эффективные решения для вашего бизнеса</h1>
+          <h1 class="hero-text">
+            Эффективные решения<br />
+            для вашего бизнеса
+          </h1>
           <button class="hero-button" type="button">Заказать услугу</button>
         </div>
       </section>
@@ -98,28 +101,28 @@
         </ul>
       </section>
       <!--Наша команда-->
-      <section>
+      <section class="team">
         <h2>Наша команда</h2>
         <ul>
           <li>
             <img src="./images/img.jpg" alt="Парень" width="270" />
             <h3 class="title">Игорь Демьяненко</h3>
-            <p class="direction">Product Designer</p>
+            <p class="direction" lang="en">Product Designer</p>
           </li>
           <li>
             <img src="./images/img1.jpg" alt="Девушка" width="270" />
             <h3 class="title">Ольга Репина</h3>
-            <p class="direction">Frontend Developer</p>
+            <p class="direction" lang="en">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img2.jpg" alt="Парень" width="270" />
             <h3 class="title">Николай Тарасов</h3>
-            <p class="direction">Marketing</p>
+            <p class="direction" lang="en">Marketing</p>
           </li>
           <li>
             <img src="./images/img3.jpg" alt="Парень" width="270" />
             <h3 class="title">Михаил Ермаков</h3>
-            <p class="direction">UI Designer</p>
+            <p class="direction" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -127,9 +130,9 @@
     <!--Подвал контакты-->
     <footer>
       <div>
-        <a class="link-logo" href="./index.html"
-          ><span class="link-logo-w">Web</span
-          ><span class="link-logo-fs">Studio</span></a
+        <a class="logo" href="./index.html"
+          ><span class="logo-web" lang="en">Web</span
+          ><span class="logo-studio-footer" lang="en">Studio</span></a
         >
         <address>
           <ul>
